- Minor Changes to Controllers - Completed Tests